<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/input_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_view_height"
            android:textSize="@dimen/text_view_size"/>

        <TextView
            android:id="@+id/ans_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_view_height"
            android:layout_below="@id/input_bar"
            android:layout_marginTop="1dp"
            android:textSize="@dimen/text_view_size"
            android:maxLines="1"/>

        <Button
            android:id="@+id/button_clear"
            android:layout_width="@dimen/btn_1_width"
            android:layout_height="@dimen/btn_1_height"
            android:layout_below="@id/ans_bar"
            android:gravity="center"
            android:textSize="@dimen/button_text_size"
            android:text="@string/clear"/>
        <Button
            android:id="@+id/button_divide"
            android:layout_width="@dimen/btn_1_width"
            android:layout_height="@dimen/btn_1_height"
            android:layout_below="@id/ans_bar"
            android:layout_toRightOf="@id/button_clear"
            android:gravity="center"
            android:textSize="@dimen/button_text_size"
            android:text="@string/divide"/>
        <Button
            android:id="@+id/button_multiply"
            android:layout_width="@dimen/btn_1_width"
            android:layout_height="@dimen/btn_1_height"
            android:layout_below="@id/ans_bar"
            android:layout_toRightOf="@id/button_divide"
            android:gravity="center"
            android:textSize="@dimen/button_text_size"
            android:text="@string/multiply"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="@dimen/btn_2_width"
            android:layout_height="@dimen/btn_2_height"
            android:layout_below="@id/ans_bar"
            android:layout_toRightOf="@id/button_multiply"
            android:gravity="center"
            android:text="@string/plus"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_7"
            android:layout_width="@dimen/btn_1_width"
            android:layout_height="@dimen/btn_1_height"
            android:layout_below="@id/button_clear"
            android:gravity="center"
            android:textSize="@dimen/button_text_size"
            android:text="@string/seven"/>
        <Button
            android:id="@+id/button_8"
            android:layout_width="@dimen/btn_1_width"
            android:layout_height="@dimen/btn_1_height"
            android:layout_below="@id/button_clear"
            android:layout_toRightOf="@id/button_7"
            android:gravity="center"
            android:textSize="@dimen/button_text_size"
            android:text="@string/eight"/>
        <Button
            android:id="@+id/button_9"
            android:layout_width="@dimen/btn_1_width"
            android:layout_height="@dimen/btn_1_height"
            android:layout_below="@id/button_clear"
            android:layout_toRightOf="@id/button_8"
            android:gravity="center"
            android:textSize="@dimen/button_text_size"
            android:text="@string/nine"/>

        <Button
            android:id="@+id/button_4"
            android:layout_width="@dimen/btn_1_width"
            android:layout_height="@dimen/btn_1_height"
            android:layout_below="@id/button_7"
            android:gravity="center"
            android:textSize="@dimen/button_text_size"
            android:text="@string/four"/>
        <Button
            android:id="@+id/button_5"
            android:layout_width="@dimen/btn_1_width"
            android:layout_height="@dimen/btn_1_height"
            android:layout_below="@id/button_7"
            android:layout_toRightOf="@id/button_4"
            android:gravity="center"
            android:textSize="@dimen/button_text_size"
            android:text="@string/five"/>
        <Button
            android:id="@+id/button_6"
            android:layout_width="@dimen/btn_1_width"
            android:layout_height="@dimen/btn_1_height"
            android:layout_below="@id/button_7"
            android:layout_toRightOf="@id/button_5"
            android:gravity="center"
            android:textSize="@dimen/button_text_size"
            android:text="@string/six"/>
        <Button
            android:id="@+id/button_minus"
            android:layout_width="@dimen/btn_2_width"
            android:layout_height="@dimen/btn_2_height"
            android:layout_marginTop="70dp"
            android:layout_below="@id/button_multiply"
            android:layout_toRightOf="@id/button_6"
            android:gravity="center"
            android:textSize="@dimen/button_text_size"
            android:text="@string/minus"/>
        <Button
            android:id="@+id/button_1"
            android:layout_width="@dimen/btn_1_width"
            android:layout_height="@dimen/btn_1_height"
            android:layout_below="@id/button_4"
            android:gravity="center"
            android:textSize="@dimen/button_text_size"
            android:text="@string/one"/>
        <Button
            android:id="@+id/button_2"
            android:layout_width="@dimen/btn_1_width"
            android:layout_height="@dimen/btn_1_height"
            android:layout_below="@id/button_4"
            android:layout_toRightOf="@id/button_1"
            android:gravity="center"
            android:textSize="@dimen/button_text_size"
            android:text="@string/two"/>

        <Button
            android:id="@+id/button_3"
            android:layout_width="@dimen/btn_1_width"
            android:layout_height="@dimen/btn_1_height"
            android:layout_below="@id/button_4"
            android:layout_toRightOf="@id/button_2"
            android:gravity="center"
            android:text="@string/three"
            android:textSize="@dimen/button_text_size" />
        <Button
            android:id="@+id/button_0"
            android:layout_width="@dimen/btn_1_width"
            android:layout_height="@dimen/btn_1_height"
            android:layout_below="@id/button_1"
            android:gravity="center"
            android:textSize="@dimen/button_text_size"
            android:text="@string/zero"/>
        <Button
            android:id="@+id/button_00"
            android:layout_width="@dimen/btn_1_width"
            android:layout_height="@dimen/btn_1_height"
            android:layout_below="@id/button_1"
            android:layout_toRightOf="@id/button_0"
            android:gravity="center"
            android:textSize="@dimen/button_text_size"
            android:text="@string/double_zero"/>
        <Button
            android:id="@+id/button_decimal"
            android:layout_width="@dimen/btn_1_width"
            android:layout_height="@dimen/btn_1_height"
            android:layout_below="@id/button_1"
            android:layout_toRightOf="@id/button_00"
            android:gravity="center"
            android:textSize="@dimen/button_text_size"
            android:text="@string/decimal"/>

        <Button
            android:id="@+id/button_equals"
            android:layout_width="@dimen/btn_2_width"
            android:layout_height="@dimen/equals_height"
            android:layout_below="@id/button_minus"
            android:layout_toRightOf="@id/button_decimal"
            android:gravity="center"
            android:text="@string/equals"
            android:textSize="@dimen/button_text_size" />
    </RelativeLayout>

</ScrollView>